5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4146/executions/1637_2704.log
== TEST (2019-04-09 10:28:32) 
-- CODE:
nota = float(input("Nota do aluno: "))
boni = input("S ou N: ")

if (boni.upper() = S):
	aumento = nota*0.1
	mensagem = nota + aumento
else:
	mensagem = nota
	
print(mensagem)	
-- ERROR:
File "XXXX", line 4
    if (boni.upper() = S):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:28:39) 
-- CODE:
nota = float(input("Nota do aluno: "))
boni = input("S ou N: ")

if (boni.upper = S):
	aumento = nota*0.1
	mensagem = nota + aumento
else:
	mensagem = nota
	
print(mensagem)	
-- ERROR:
File "XXXX", line 4
    if (boni.upper = S):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:30:49) 
-- CODE:
nota = float(input("Nota do aluno: "))
boni = input("S ou N: ")

if (boni.upper() = "S"):
	aumento = nota*0.1
	mensagem = nota + aumento
else:
	mensagem = nota
	
print(mensagem)	
-- ERROR:
File "XXXX", line 4
    if (boni.upper() = "S"):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:31:07) 
-- CODE:
nota = float(input("Nota do aluno: "))
boni = input("S ou N: ")

if (boni.upper() == "S"):
	aumento = nota*0.1
	mensagem = nota + aumento
else:
	mensagem = nota
	
print(mensagem)	
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:31:19) 
-- CODE:
nota = float(input("Nota do aluno: "))
boni = input("S ou N: ")

if (boni.upper() == "S"):
	aumento = nota*0.1
	mensagem = nota + aumento
else:
	mensagem = nota
	
print(mensagem)	
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:31:24) 
-- CODE:
nota = float(input("Nota do aluno: "))
boni = input("S ou N: ")

if (boni.upper() == "S"):
	aumento = nota*0.1
	mensagem = nota + aumento
else:
	mensagem = nota
	
print(mensagem)	
-- EXECUTION TIME:
0.149372
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
